<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/lat" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:hint="@string/ht1"
                            android:inputType="numberDecimal|numberSigned" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/lon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:hint="@string/ht2"
                            android:inputType="numberDecimal|numberSigned" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/sea" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="TextView" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/windd" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="TextView" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/winds" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="TextView" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/temp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="TextView" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="@string/time" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/textBackgroundColor"
                            android:textColor="@color/white"
                            android:shadowColor="@color/black"
                            android:shadowDx="15"
                            android:shadowDy="15"
                            android:shadowRadius="15"
                            android:padding="5dp"
                            android:text="TextView" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but"
            android:backgroundTint="?attr/buttonBackgroundTint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/clear_day" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swi"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

    </androidx.constraintlayout.widget.ConstraintLayout>